# spacy-layout

./: .gitignore  COMMIT.md  PLAN.md  PLAN_SUMMARY.md  README.md  requirements.txt  setup.cfg  setup.py
spacy_layout/: __init__.py  layout.py  model.py  types.py  util.py
spacy_layout/adapters/: __init__.py  azure_adapter.py  base.py  docling_adapter.py
tests/: integration_test_azure.py  test_azure.py  test_general.py  visualize_bounding_boxes.py
