[metadata]
version = 0.1.0
description = Azure Document Intelligence integration for spaCy
url = https://github.com/explosion/spacy-layout-azure
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
project_urls =
    Release notes = https://github.com/explosion/spacy-layout-azure/releases
    Source = https://github.com/explosion/spacy-layout-azure

[options]
zip_safe = true
python_requires = >=3.10
install_requires =
    spacy>=3.7.5
    pandas
    srsly  # version range set by spaCy
    azure-ai-documentintelligence>=1.0.2
    azure-core>=1.34.0
    python-dotenv>=1.1.0

[bdist_wheel]
universal = true

[sdist]
formats = gztar
